--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "webpack",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "dev": "webpack serve --mode=development",
     "build": "webpack --mode=production",
-    "build:dev": "webpack --mode=development",
-    "test": "echo Stiamo studiando webpack"
+    "build:dev": "webpack --mode=development"
   },
   "keywords": [],
   "author": "",
